--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,10 @@
     "connect-busboy": "0.0.1",
     "di": "~2.0.0-pre-9",
     "express": "~4.3.0",
-    "express-jwt": "~0.3.1",
+    "express-jwt": "^3.0.1",
     "googleapis": "^2.0.2",
     "hogan.js": "~3.0.2",
-    "jsonwebtoken": "~0.4.1",
+    "jsonwebtoken": "^5.0.4",
     "moment": "~2.6.0",
     "mysql": "~2.3.1",
     "nodemailer": "^1.3.4",
